# devnexai-coding-agent-

./: .env.example  .gitattributes  .gitignore  INSTALAR.md  LICENSE  README.md  build_exe.bat  devnexai_gui.py  devnexai_main.py  installer.iss  pyproject.toml
devnexai/: __main__.py  agent.py  cli.py  config.py  gui.py  memory.py  providers.py  safety.py  tools.py  ui.py
