[project]
name = "devnexai"
version = "0.4.0"
description = "Agente de codificación multi-LLM (CLI + app de escritorio) estilo Claude Code"
requires-python = ">=3.9"
dependencies = ["rich>=13.0", "customtkinter>=5.2"]

[project.scripts]
devnexai = "devnexai.cli:main"

[project.gui-scripts]
devnexai-gui = "devnexai.gui:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
